# fbref-scraper

./: .gitignore  README.md  pyproject.toml
fbref_scraper/: __init__.py  _utils.py  fbref_scraper.py  get_match_report.py  get_matches.py  get_teams.py
tests/: fb_scraper.py
