[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fbref-scraper"
version = "0.1.0"
description = "Scrape team, match schedule, and match report stats from fbref.com"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
dependencies = [
    "beautifulsoup4",
    "pandas",
    "playwright",
    "seleniumbase",
    "lxml",
]

[project.urls]
Homepage = "https://github.com/yourusername/fbref-scraper"

[tool.setuptools.packages.find]
include = ["fbref_scraper*"]
